VideoJS: Border and overflow fixes
Some fixes for the border and the overflow of thumbnails broke when
this was refactored for dialog mode. This shows especially in the
max-width sizing and in the fullscreen mode.

--- a/resources/ext.tmh.player.inline.styles.less
+++ b/resources/ext.tmh.player.inline.styles.less
@@ -2,6 +2,10 @@
 	.video-js {
 		/* stylelint-disable-next-line declaration-property-unit-disallowed-list */
 		font-size: 13px;
+
+		&.thumbimage {
+			border: 0;
+		}
 	}
 	/* We force the size of player to avoid reflows after loading the JS */
 	audio.video-js {
