--- a/resources/ext.tmh.player.styles.less
+++ b/resources/ext.tmh.player.styles.less
@@ -2,6 +2,7 @@
 
 /* Shrink videos to fit rather than overflowing containers */
 video {
+	box-sizing: border-box;
 	width: auto;
 	height: auto;
 	max-width: 100%;
