--- a/resources/ext.tmh.thumbnail.css
+++ b/resources/ext.tmh.thumbnail.css
@@ -15,6 +15,7 @@
 	.mediaContainer audio,
 	.PopUpMediaTransform,
 	.PopUpMediaTransform img {
+		box-sizing: border-box;
 		width: auto;
 		max-width: 100%;
 		height: auto;
